--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - /home/mikhail/PycharmProjects/publicpage/balancer/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /home/mikhail/PycharmProjects/publicpage/static:/static/
+      - ./balancer/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./static:/static/
 
 
   flaskserver:
